# aeo_grader

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  emilio.py  helpers.py  main.py  prompt.yml  pyproject.toml  requirements.txt  storage_utils.py
firebase/: .firebaserc  firebase.json
firebase/.firebase/: hosting.cHVibGlj.cache
firebase/functions/: index.js  package-lock.json  package.json
firebase/public/: index.html  login_referencia.html
rag/: example_report.html  skeleton_report.html
tools/: ga4_tool.py  gsc_tool.py
tools/aeo/: subgraph_aeo.py
tools/aeo/nodes/: especialista_aeo.py  tool_aeo.py
tools/ga4/: subgraph_ga4.py
tools/ga4/nodes/: especialista_ga4.py  tool_ga4.py
tools/gsc/: subgraph_gsc.py
tools/gsc/nodes/: especialista_gsc.py  tool_gsc.py
tools/informe/: crear_informe.py
