[project]
name = "emilio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "IagoSuntzu", email = "iago@suntzu-growth.com"},
]
dependencies = ["langchain>=1.2.15", "langgraph>=1.1.6", "langchain-google-genai>=4.2.1", "dotenv>=0.9.9", "playwright>=1.58.0", "git+https://github.com/steel-dev/steel-python", "steel-sdk>=0.17.0", "google-auth-oauthlib>=1.3.1", "google>=3.0.0", "google-genai>=1.73.1", "google-analytics-data>=0.21.0", "google-api-python-client>=2.194.0", "langchain-anthropic>=1.4.0", "anthropic>=0.96.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
